# Zwischenzug

./: .dockerignore  .env.example  .gitignore  CREDITS.md  Dockerfile  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: python-publish.yml
docs/: README.md  overview.md
docs/architecture/: hooks-system.md  model-system.md  overview.md  session-lifecycle.md  system-prompt.md
docs/configuration/: config-files.md  environment.md  mcp.md
docs/development/: plan.md
docs/games/: overview.md
docs/graph/: knowledge-files.md  learning-engine.md  overview.md
docs/memory/: overview.md
docs/permissions/: permission-system.md  sandboxing.md
docs/skills/: overview.md
docs/tools/: agent-pool.md  auxiliary-tools.md  background-tasks.md  bash-tool.md  browser-tool.md  file-tools.md  graph-tools.md  mcp-tools.md  notebook-tool.md  overview.md  patch-tool.md  planning-tool.md  plugin-system.md  (+4 more)
scripts/: start-vnc.sh
skills/: graph-review.md  impact-report.md  learn-repo.md  safe-edit.md  trace-flow.md
src/: __init__.py  app_paths.py  main.py
tests/: conftest.py  test_agent_pool.py  test_background.py  test_browser.py  test_browser_agent.py  test_catalog.py  test_cli_config.py  test_cli_repl.py  test_compact.py  test_core_agent.py  test_core_session.py  test_graph.py  test_hooks.py  test_learning.py  test_main_build_agent.py  test_mcp.py  test_memory.py  test_modes.py  test_notebook.py  test_patch.py  test_permissions.py  test_permissions_manager.py  test_planning.py  test_plugins.py  test_porting_workspace.py  test_provider.py  test_sandbox.py  test_session_store.py  test_shell_session.py  test_skills.py  test_subagent.py  test_system_prompt.py  test_tools_auxiliary.py  test_tools_bash.py  test_tools_files.py  test_tools_registry.py  test_tools_search.py  test_tools_web.py  test_ui_zwischenzug.py  test_worktree.py
(+72 files in other folders)
