[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zwis"
version = "0.1.0"
description = "Zwischenzug CLI — AI coding agent powered by LangChain"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Zwischenzug contributors" }]
keywords = ["cli", "agent", "runtime", "python", "langchain", "ai"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
]

dependencies = [
  # LangChain core (required)
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  # LLM providers via LiteLLM (covers all providers — groq, gemini, openai, etc.)
  "langchain-litellm>=0.2.0",
  "litellm>=1.51.0",
  # HTTP & web tools
  "httpx>=0.27.0",
  "html2text>=2024.2.26",
  "ddgs>=7.0.0",
  "mcp>=1.27.0",
  # Config & parsing
  "python-dotenv>=1.0.0",
  "PyYAML>=6.0",
  # UI & validation
  "rich>=13.7.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
browser = ["browser-use>=0.11.0,<0.12.0", "playwright>=1.40.0"]
dev     = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-mock>=3.12"]

[project.scripts]
zwischenzug = "src.main:main"
zwis        = "src.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["src", "src.*"]

[tool.setuptools.package-data]
"src.catalog" = ["reference_data/*.json"]
"src.skills"  = ["builtin/*.md"]
"src.graph"   = ["*.py"]
"src.learning" = ["*.py"]
"src.data"    = ["env.example"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
